Add config file and email feature

--- a/examples/template.tex
+++ b/examples/template.tex
@@ -21,7 +21,7 @@
 }
 
 \newcommand\newtask[1]{
-\subsection*{Aufgabe #1}
+\subsection*{Exercise #1}
 }
 
 \newcommand\scoreTask[5]{% <sheet> <task> <subtask> <score> <total>
